tests/positive/basic/ceil_integer/input.ci
void main() { print(toString(ceil(3.0)) + "\n"); }
