tests/negative/semantic/wrong_arg_count_execstderr/input.ci
void main() {
    print(toString(execStderr()) + "\n");
}
